<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/fragment_enter_otp_code_title"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/fragment_code_sent_to"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_error"
        android:text="@string/fragment_code_invalid_otp"
        android:padding="4dp"
        android:textColor="@color/red"
        android:visibility="gone"
        android:paddingVertical="4dp"
        android:drawablePadding="8dp"
        android:paddingHorizontal="16dp"
        android:drawableStart="@drawable/ic_error"
        app:layout_constraintEnd_toEndOf="@+id/otp"
        app:layout_constraintStart_toStartOf="@+id/otp"
        app:layout_constraintTop_toBottomOf="@+id/otp" />


    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:bar_enabled="true"
        app:bar_height="2dp"
        app:height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:length="5"
        app:otp_text_size="24dp"
        app:width="40dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/verify"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/background_edit_text"
        android:backgroundTint="#00B2FF"
        android:text="@string/fragment_code_verified"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:cornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>